--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -5,16 +5,16 @@ on:
     branches:
       - master
 
-name: ? Deploy website on push
+name: 🚀 Deploy website on push
 jobs:
   web-deploy:
-    name: ? Deploy
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: ? Get latest code
+      - name: 🚚 Get latest code
         uses: actions/checkout@v2
 
-      - name: ? Sync files
+      - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.2.0
         with:
           # InfinitiyFree FTP server
